# piri

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  config.example.toml  install.sh  rustfmt.toml
.github/workflows/: release.yml
docs/en/: architecture.md  development.md  window_matching.md
docs/en/plugins/: autofill.md  empty.md  plugins.md  scratchpads.md  singleton.md  swallow.md  window_order.md  window_rule.md
docs/zh/: architecture.md  development.md  window_matching.md
docs/zh/plugins/: autofill.md  empty.md  plugins.md  scratchpads.md  singleton.md  swallow.md  window_order.md  window_rule.md
src/: commands.rs  config.rs  daemon.rs  ipc.rs  lib.rs  main.rs  niri.rs  scratchpads.rs  utils.rs
src/plugins/: autofill.rs  empty.rs  mod.rs  scratchpads.rs  singleton.rs  swallow.rs  window_order.rs  window_rule.rs  window_utils.rs
